--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "prueba con webdriverIO",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "wdio": "wdio run ./wdio.conf.js"
+    "test": "wdio run ./wdio.conf.js",
+    "report": "allure generate allure-results --clean && allure open",
+    "clean": "rm -rf allure-results/* && rm -rf allure-report/*"
   },
   "keywords": [],
   "author": "",
