--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "wdio run ./wdio.conf.js",
-    "report": "allure generate allure-results --clean && allure open",
-    "clean": "rm -rf allure-results/* && rm -rf allure-report/*"
+    "report:clean": "rimraf allure-results/*",
+    "report:generate": "./scripts/report-generation.sh",
+    "test:report": "npm run report:clean && npm run test && npm run report:generate"
   },
   "keywords": [],
   "author": "",
