--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@wdio/spec-reporter": "^9.1.3",
     "@wdio/visual-service": "^6.2.1",
     "allure-commandline": "^2.31.0",
+    "chai": "^5.1.2",
     "chromedriver": "^130.0.1",
+    "mocha": "^10.8.2",
     "reflect-metadata": "^0.2.2",
     "wdio-docker-service": "^3.2.1",
     "wdio-slack-service": "^2.0.9"
